test_scores/negative_dimers/features/Q16666.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q16666.pkl.xz